--- a/app/public/create.html
+++ b/app/public/create.html
@@ -1,6 +1,7 @@
 <html>
-  <title>Digital Mirror</title>
-  <head>
+<title>Digital Mirror</title>
+
+<head>
     <!-- meta tags -->
     <meta charset="utf-8">
     <meta name="create" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,61 +12,73 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.min.js" integrity="sha256-oh7N5nthuhldTk8/34Za7FXv3BkeVN9vAnYk/pLfC78=" crossorigin="anonymous"></script>
     <script src="../api/users.js"></script>
-  </head>
-  <body class="p-5 mb-2 bg-dark text-white">
+</head>
+
+<body class="p-5 mb-2 bg-dark text-white">
     <div class="container">
-      <div class="row text-center">
-        <div class="col">
-          <h1>Create an Account</h1>
+        <div class="row text-center">
+            <div class="col">
+                <h1>Create an Account</h1>
+            </div>
         </div>
-      </div>
-    
-      <div class="row pt-5">
-        <div class="col text-center">
-          <form>
-            <div class="form-group p-2 pr-5 pl-5">
-              <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Name" required>
-              <div class="invalid-feedback">
-                Please enter your name.
-              </div>
+
+        <div class="row pt-5">
+            <div class="col text-center">
+                <form action="/user" method="post" oninput="confirmPassword.setCustomValidity(confirmPassword.value != password.value ? 'Passwords do not match.' : '')" oninput="password.setCustomValidity(password.value)">
+                    <div class="form-group p-2 pr-5 pl-5">
+                        <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Username" required>
+                        <div class="invalid-feedback">
+                            Please enter username.
+                        </div>
+                    </div>
+                    <div class="form-group p-2 pr-5 pl-5">
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com" required>
+                        <div class="invalid-feedback">
+                            Please provide a valid email.
+                        </div>
+                    </div>
+                    <div class="form-group p-2 pr-5 pl-5">
+                        <input type="password" class="form-control validate" id="password" placeholder="Password" required>
+                        <small id="passwordHelpBlock" class="form-text text-muted">
+                          Your password must be 8-20 characters long, contain letters and numbers and at least one special character, and must not contain emojis.
+                        </small>
+                        <div class="invalid-feedback">
+                            Please provide a valid password.
+                        </div>
+                        <div class="alert alert-warning password-alert" role="alert">
+                            <ul>
+                                <li class="requirements leng"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must be between 8 and 20 chars.</li>
+                                <li class="requirements big-letter"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must contain at least 1 capital letter.</li>
+                                <li class="requirements num"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must have at least 1 number.</li>
+                                <li class="requirements special-char"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must have at least 1 special char.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="form-group p-2 pr-5 pl-5">
+                        <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+                        <div class="invalid-feedback">
+                            Please confirm your password.
+                        </div>
+                    </div>
+                    <div class="form-group pt-4">
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </div>
+                </form>
             </div>
-            <div class="form-group p-2 pr-5 pl-5">
-              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com" required>
-              <div class="invalid-feedback">
-                Please provide a valid email.
-              </div>
+            <div class="col">
+                <h2>
+                    Your Data is safe with us.
+                    <br></br>
+                    The information you provide will never be seen by anyone else, not even us.
+                    <br></br>
+                    Digital Mirror will never post to any of your accounts.
+                    <br></br>
+                    You will always have the ability to unlink your accounts, or delete you Digital Reflection entirely.
+                </h2>
             </div>
-            <div class="form-group p-2 pr-5 pl-5">
-              <input type="password" class="form-control" id="password" placeholder="Password" required>
-              <small id="passwordHelpBlock" class="form-text text-muted">
-                Your password must be 8-20 characters long, contain letters and numbers and at least one special character, and must not contain emojis.
-              </small>
-              <div class="invalid-feedback">
-                Please provide a valid password.
-              </div>
-            </div>
-            <div class="form-group p-2 pr-5 pl-5">
-              <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
-              <div class="invalid-feedback">
-                Please confirm your password.
-              </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-          </form>
         </div>
-        <div class="col">
-          <h2>
-            Your Data is safe with us.
-            <br></br>
-            The information you provide will never be seen by anyone else, not even us.
-            <br></br>
-            Digital Mirror will never post to any of your accounts.
-            <br></br>
-            You will always have the ability to unlink your accounts, or delete you Digital Reflection entirely.
-          </h2>
-        </div>
-      </div>
     </div>
-      
-  </body>
+
+</body>
+
 </html>
