--- a/app/public/connectAccounts.html
+++ b/app/public/connectAccounts.html
@@ -7,12 +7,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.min.js" integrity="sha256-oh7N5nthuhldTk8/34Za7FXv3BkeVN9vAnYk/pLfC78=" crossorigin="anonymous"></script>
     <script src="./connectAccounts.js"></script>
-  </head>
-  <body>
+    <link href="styles/style.css" rel="stylesheet">
 
+  </head>
+  <body id="background">
+    <div id="home">
     <div id="content">
       <!-- TODO add a fancy loading spinner or some shit like that. -->
       LOADING, PLEASE WAIT
     </div>
+  </div>
   </body>
 </html>
