Working on validation.

--- a/app/public/create.html
+++ b/app/public/create.html
@@ -38,24 +38,24 @@
                         </div>
                     </div>
                     <div class="form-group p-2 pr-5 pl-5">
-                        <input type="password" class="form-control validate" id="password" placeholder="Password" required>
+                        <input class="form-control validate" id="password" placeholder="Password" required>
                         <small id="passwordHelpBlock" class="form-text text-muted">
                           Your password must be 8-20 characters long, contain letters and numbers and at least one special character, and must not contain emojis.
                         </small>
                         <div class="invalid-feedback">
                             Please provide a valid password.
                         </div>
-                        <div class="alert alert-warning password-alert" role="alert">
+                        <!-- <div class="alert alert-warning password-alert" role="alert">
                             <ul>
                                 <li class="requirements leng"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must be between 8 and 20 chars.</li>
                                 <li class="requirements big-letter"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must contain at least 1 capital letter.</li>
                                 <li class="requirements num"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must have at least 1 number.</li>
                                 <li class="requirements special-char"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must have at least 1 special char.</li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="form-group p-2 pr-5 pl-5">
-                        <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
+                        <input class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
                         <div class="invalid-feedback">
                             Please confirm your password.
                         </div>
