--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
   <body>
   <div id="background">
     <div id='home'>
-      <div class="typewriter">
+      <div class="typeText">
         <h1>Welcome to Digital Mirror</h1>
       </div>
       <p>Create an <a href='/create'>Account</a> to get Started on Your Journey To Self Reflection</p>
