--- a/app/public/create.html
+++ b/app/public/create.html
@@ -27,38 +27,23 @@
                 <form action="/user" method="post" oninput="confirmPassword.setCustomValidity(confirmPassword.value != password.value ? 'Passwords do not match.' : '')" oninput="password.setCustomValidity(password.value)">
                     <div class="form-group p-2 pr-5 pl-5">
                         <input type="text" class="form-control" id="name" aria-describedby="nameHelp" placeholder="Username" required>
-                        <div class="invalid-feedback">
-                            Please enter username.
-                        </div>
+                        <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group p-2 pr-5 pl-5">
                         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="name@example.com" required>
-                        <div class="invalid-feedback">
-                            Please provide a valid email.
-                        </div>
+                        <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group p-2 pr-5 pl-5">
-                        <input class="form-control validate" id="password" placeholder="Password" required>
+                        <input type="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}$" title="Your password must be between 8 and 20 characters, contain at least 1 upper case letter, 1 lower case letter, and 1 number" class="form-control validate" id="password" placeholder="Password"
+                            required>
                         <small id="passwordHelpBlock" class="form-text text-muted">
-                          Your password must be 8-20 characters long, contain letters and numbers and at least one special character, and must not contain emojis.
+                          Your password must be between 8-20 characters, contain at least 1 upper case letter, 1 lower case letter, and 1 number.
                         </small>
-                        <div class="invalid-feedback">
-                            Please provide a valid password.
-                        </div>
-                        <!-- <div class="alert alert-warning password-alert" role="alert">
-                            <ul>
-                                <li class="requirements leng"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must be between 8 and 20 chars.</li>
-                                <li class="requirements big-letter"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must contain at least 1 capital letter.</li>
-                                <li class="requirements num"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must have at least 1 number.</li>
-                                <li class="requirements special-char"><i class="fas fa-check green-text"></i><i class="fas fa-times red-text"></i>Your password must have at least 1 special char.</li>
-                            </ul>
-                        </div> -->
+                        <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group p-2 pr-5 pl-5">
-                        <input class="form-control" id="confirmPassword" placeholder="Confirm Password" required>
-                        <div class="invalid-feedback">
-                            Please confirm your password.
-                        </div>
+                        <input type="password" class="form-control" data-match="password" id="confirmPassword" placeholder="Confirm Password" required>
+                        <div class="help-block with-errors"></div>
                     </div>
                     <div class="form-group pt-4">
                         <button type="submit" class="btn btn-primary">Register</button>
