--- a/app/public/login.html
+++ b/app/public/login.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="create" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS and scripts -->
+    <link href="styles/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -14,11 +15,13 @@
     <script src="../api/users.js"></script>
 </head>
 
-<body class="p-5 mb-2 bg-dark text-white">
+<body class="p-5 mb-2 bg-dark text-white" id="background">
     <div class="container">
         <div class="row text-center">
             <div class="col">
-                <h1>Login</h1>
+                <div class="typeText" id="fast" style="display: inline-block;">
+                    <h1>Login</h1>
+                </div>
             </div>
         </div>
 
