--- a/app/public/viewData.html
+++ b/app/public/viewData.html
@@ -15,5 +15,8 @@
       <!-- TODO add a fancy loading spinner or some shit like that. -->
       LOADING, PLEASE WAIT
     </div>
+    <div id="sentiment">
+      
+    </div>
   </body>
 </html>
