Added timeout to x-auth cookie. Also added navbar to all pages of website.

--- a/app/public/connectAccounts.html
+++ b/app/public/connectAccounts.html
@@ -11,6 +11,12 @@
 
   </head>
   <body id="background">
+    <div id="nav-placeholder"></div>
+    <script> 
+        $(function(){
+            $("#nav-placeholder").load("./navbar.html");
+        });
+    </script>
     <div id="home">
     <div id="content">
       <!-- TODO add a fancy loading spinner or some shit like that. -->
