--- a/app/public/analyse.html
+++ b/app/public/analyse.html
@@ -1,6 +1,5 @@
 <html>
 <title>Digital Mirror</title>
-
 <head>
     <!-- meta tags -->
     <meta charset="utf-8">
@@ -14,8 +13,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.min.js" integrity="sha256-oh7N5nthuhldTk8/34Za7FXv3BkeVN9vAnYk/pLfC78=" crossorigin="anonymous"></script>
     <script src="../api/analyse.js"></script>
 </head>
-
-<body class="p-5 mb-2 bg-dark text-white" id="background">
+<div id="nav-placeholder"></div>
+<script> 
+    $(function(){
+        $("#nav-placeholder").load("./navbar.html");
+    });
+</script>
+<body class="mb-2 bg-dark text-white" id="background">
     <div class="container">
         <div class="row text-center">
             <div class="col">
