--- a/app/public/login.html
+++ b/app/public/login.html
@@ -1,10 +1,9 @@
 <html>
 <title>Digital Mirror</title>
-
 <head>
     <!-- meta tags -->
     <meta charset="utf-8">
-    <meta name="create" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="login" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS and scripts -->
     <link href="styles/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,8 +13,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.min.js" integrity="sha256-oh7N5nthuhldTk8/34Za7FXv3BkeVN9vAnYk/pLfC78=" crossorigin="anonymous"></script>
     <script src="../api/users.js"></script>
 </head>
-
-<body class="p-5 mb-2 bg-dark text-white" id="background">
+<div id="nav-placeholder"></div>
+<script> 
+    $(function navbar(){
+        $("#nav-placeholder").load("./navbar.html");
+    });
+</script>
+<body class="mb-2 bg-dark text-white" id="background">
     <div class="container">
         <div class="row text-center">
             <div class="col">
