Added navbar to viewData.html

--- a/app/public/viewData.html
+++ b/app/public/viewData.html
@@ -12,6 +12,12 @@
     <script src="./wordcloud.js"></script>
   </head>
   <body id="background">
+    <div id="nav-placeholder"></div>
+    <script> 
+        $(function navbar(){
+            $("#nav-placeholder").load("./navbar.html");
+        });
+    </script>
     <div class="row text-center">
       <div class="col">
           <div class="typeText" style="display: inline-block;">
