--- a/app/public/analyse.html
+++ b/app/public/analyse.html
@@ -23,7 +23,7 @@
     });
 </script>
 <body class="mb-2 bg-dark text-white" id="background">
-    <div class="container">
+    <div id="wordcloud" class="container">
         <div class="row text-center">
             <div class="col">
                 <div class="typeText" id="fast" style="display: inline-block;">
