--- a/app/public/navbar.html
+++ b/app/public/navbar.html
@@ -1,5 +1,6 @@
 <html>
 <title>Digital Mirror</title>
+
 <head>
     <!-- meta tags -->
     <meta charset="utf-8">
@@ -11,9 +12,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.4.2/handlebars.min.js" integrity="sha256-oh7N5nthuhldTk8/34Za7FXv3BkeVN9vAnYk/pLfC78=" crossorigin="anonymous"></script>
     <script src="../api/getUser.js"></script>
+    <link rel="favicon" type="image/ico" href="/favicon.ico" />
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+    <a class="navbar-brand" href="#"><img src="./favicon.ico" width="30" height="30" alt=""></a>
     <a class="navbar-brand" href="./index">Digital Mirror</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,21 +24,21 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="./index">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./login">Login </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./create">Create Account </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./connectAccounts.html">Connect Accounts </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./analyse">View Reflection </a>
-        </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="./index">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./login">Login </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./create">Create Account </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./connectAccounts.html">Connect Accounts </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./analyse">View Reflection </a>
+            </li>
         </ul>
         <!-- <span id="hello-user" class="navbar-text">
         </span> -->
